[gd_scene load_steps=11 format=2]

[ext_resource path="res://resources/fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://materials/main_menu/HoverableItem.tres" type="Material" id=2]
[ext_resource path="res://scripts/main_menu/HoverableItem.gd" type="Script" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 3, 1, 0.5 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 1, 2, 0.5 )

[sub_resource type="DynamicFont" id=3]
size = 360
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="QuadMesh" id=4]
resource_local_to_scene = true
material = ExtResource( 2 )
size = Vector2( 5, 1 )

[sub_resource type="SpatialMaterial" id=5]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 0.188235, 0.533333, 0.0627451, 0.411765 )

[sub_resource type="QuadMesh" id=6]
resource_local_to_scene = true
material = SubResource( 5 )
size = Vector2( 1, 1.8 )

[sub_resource type="GDScript" id=7]
script/source = "extends MeshInstance


const SCALE_START = Vector3(0, 1, 1)
const SCALE_END = Vector3(5, 1, 1)
const TRANSLATION_START = Vector3(0, 0, -0.1)
const TRANSLATION_END = Vector3(2.5, 0, -0.1)

const TWEEN_SPEED = 0.2
const TWEEN_DELAY = 0.1

onready var tween_size = $TweenSize
onready var tween_position = $TweenPosition


# Called when the node enters the scene tree for the first time.
func _ready():
	mesh.surface_set_material(0, mesh.surface_get_material(0).duplicate())
	pass # Replace with function body.

func slide():
#	tween_size.interpolate_property(self, \"scale\", scale, SCALE_END, TWEEN_SPEED, 0, 2)
	tween_position.interpolate_property(self, \"translation\", translation, TRANSLATION_END, TWEEN_SPEED, 0, 2)
	tween_size.start()
	tween_position.start()
	pass

func unslide():
#	tween_size.interpolate_property(self, \"scale\", scale, SCALE_START, TWEEN_SPEED, 0, 2)
	tween_position.interpolate_property(self, \"translation\", translation, TRANSLATION_START, TWEEN_SPEED, 0, 2)
	tween_size.start()
	tween_position.start()
	pass
"

[node name="HoverableItem" type="Spatial"]
script = ExtResource( 3 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.14518, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="GUI3D" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.73458, 0, 0 )

[node name="Viewport" type="Viewport" parent="GUI3D"]
size = Vector2( 2500, 500 )
transparent_bg = true
hdr = false
render_target_v_flip = true
render_target_update_mode = 3

[node name="Control" type="Control" parent="GUI3D/Viewport"]
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 5
size_flags_vertical = 5

[node name="Label" type="Label" parent="GUI3D/Viewport/Control"]
margin_right = 246.0
margin_bottom = 72.0
size_flags_horizontal = 5
custom_fonts/font = SubResource( 3 )
text = "Here goes your text"

[node name="MeshInstance" type="MeshInstance" parent="GUI3D"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.1 )
mesh = SubResource( 4 )
material/0 = null

[node name="Slider" type="MeshInstance" parent="."]
transform = Transform( 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.1 )
mesh = SubResource( 6 )
material/0 = null
script = SubResource( 7 )

[node name="TweenSize" type="Tween" parent="Slider"]

[node name="TweenPosition" type="Tween" parent="Slider"]
[connection signal="input_event" from="Area" to="." method="_on_Area_input_event"]
[connection signal="mouse_entered" from="Area" to="." method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Area" to="." method="_on_Area_mouse_exited"]
